ParameterIndependent/Opt3.err
Traceback (most recent call last):
  File "OptimisationMethod.py", line 12, in <module>
    import RayTracerMainProgram as RT
  File "/beegfs/scratch/user/m/hw454/Raytracer/ParameterIndependentNewGit/Raytracer/ParameterIndependent/RayTracerMainProgram.py", line 41, in <module>
    import ParameterLoad as PI
  File "/beegfs/scratch/user/m/hw454/Raytracer/ParameterIndependentNewGit/Raytracer/ParameterIndependent/ParameterLoad.py", line 535
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
